# TensorRT-LLM

./: how-to-build.md  setup.py
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/manifold/: CMakeLists.txt  worker.cpp  worker.h  workerBinding.cpp  workerBinding.h
cpp/tensorrt_llm/plugins/: CMakeLists.txt
cpp/tensorrt_llm/plugins/ncclPlugin/: recvPlugin.cpp  sendPlugin.cpp
cpp/tensorrt_llm/thop/: CMakeLists.txt  worker.cpp  worker.h
examples/llama/: .gitignore  eval_llama.sh  example.py  memo  plot.py  run.py  run_llama.sh
examples/llama/inputs/: input_1.csv  input_128.csv  input_16.csv  input_2.csv  input_32.csv  input_4.csv  input_64.csv  input_8.csv
scripts/: build_wheel.py  dev-docker.sh
tensorrt_llm/: __init__.py  worker.py
tensorrt_llm/runtime/: generation.py
